NIAD-969: use StringUtils to check if identifier is null or empty